# chat-rs

./: .dockerignore  .env.example  .gitignore  .terraform.lock.hcl  Cargo.toml  Dockerfile  README.md  bacon.toml  build.rs  config.tofu  flake.nix  postgres.sh  result  result-win  secretspec.toml  webrtc-todo.md
.github/workflows/: bench.yml  release.yml  rust.yml
crates/android-spike/: Cargo.toml
crates/android-spike/src/: lib.rs  main.rs
crates/chat-core/: Cargo.toml
crates/chat-core/src/: lib.rs  resampler.rs  voice_settings.rs
crates/client/: Cargo.toml
crates/client/src/: chat_stream.rs  client.rs  colors.rs  config.rs  credentials.rs  main.rs  model.rs  voice_settings.rs  webrtc_stream.rs
crates/client/src/audio_processing/: call_handler.rs  cues.rs  mixer.rs  mod.rs
crates/client/src/audio_processing/assets/cues/: synth_variants.py
crates/client/src/screens/: auth.rs  chat.rs  mod.rs  settings.rs
crates/client/src/types/: async_data.rs  mod.rs
crates/client/src/widgets/: context_menu.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: client.rs  ffi.rs  lib.rs  mixer.rs  rtc.rs  voice.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs  seed.rs
crates/server/src/api/: auth.rs  post.rs  server.rs  stream.rs  user.rs
crates/server/src/entities/: channel.rs  mod.rs  post.rs  refresh_token.rs  server.rs  text_channel.rs  user.rs  user_server.rs  user_text_channel.rs  user_user.rs  voice_channel.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: config.rs  lib.rs
crates/shared/src/convert/: auth.rs  mod.rs  post.rs  server.rs  stream.rs  user.rs
crates/shared/src/domain/: auth.rs  mod.rs  post.rs  server.rs  stream.rs
crates/shared/src/proto/post/v1/: post.proto
crates/shared/src/proto/server/v1/: server.proto
crates/shared/src/proto/stream/v1/: stream.proto
crates/shared/src/proto/user/v1/: user.proto
spec-derive/: Cargo.toml
spec-derive-core/: Cargo.toml
spec-derive-core/src/: lib.rs
spec-derive/src/: generate.rs  lib.rs
src/: config.rs  lib.rs  user.rs
src/schema/: mod.rs  post.rs  user.rs
src/shared/: auth.rs  convert.rs  convert_old.rs
src/shared/convert/: auth.rs  mod.rs  stream.rs  user.rs
src/shared/domain/: auth.rs  mod.rs  stream.rs  user.rs
src/shared/proto/auth/v1/: auth.proto
src/shared/proto/stream/v1/: stream.proto
src/spec/: auth.rs  macros.rs  mod.rs
src/spec_derive/: mod.rs
