[package]
name = "chat-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
futures-util = { version = "0.3.31", features = ["sink", "std"] }
iced = { version = "0.14.0", features = ["tokio", "sipper", "image"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
dotenvy = "0.15"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-native-tls", "macros" ] }
async-tungstenite = { version = "0.32.1", features = [ "tokio-runtime" ] }
rkyv = { version = "0.8.15", features = ["uuid-1", "alloc"] }
bytes = "1.11.1"
rand = "0.10.0"
resend-rs = "0.21.1"
email_address = "0.2.9"
serde = "1.0.228"
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
hex = "0.4.3"
tower-http = { version = "0.6.8", features = ["auth", "trace"] }
http-body-util = { version = "0.1.3", features = [ "full" ] }
http = "1.4.0"
anyhow = "1.0.102"
tower = "0.5.3"
spec-derive = { path = "spec-derive" }
spec-derive-core = { path = "spec-derive-core" }
reqwest = "0.13.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest-middleware = "0.5.1"
async-trait = "0.1.89"

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",
    "serde"
]
