[workspace]
resolver = "3"
members = ["crates/shared", "crates/server", "crates/client", "crates/core"]

[workspace.dependencies]
# one place to pin versions everything inherits
tokio = { version = "1.49.0", features = ["full"] }
tonic = "0.14.6"
prost = "0.14.3"
prost-types = "0.14.3"
tonic-prost = "0.14.6"
tokio-stream = "0.1.18"
webrtc = "0.17.1"
serde = "1.0.228"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
bytes = "1.11.1"
futures-util = { version = "0.3.31", features = ["sink", "std"] }
tracing = "0.1.44"
async-trait = "0.1.89"
dotenvy = "0.15"
chat-shared = { path = "crates/shared" }
chat-core = { path = "crates/core" }
jwt-simple = { version = "0.12.14", default-features = false, features = ["pure-rust"] }
tower = "0.5.3"
http = "1.4.0"
email_address = "0.2.9"       
chrono = "0.4.44"

[patch.crates-io]
sonora-aec3 = { git = "https://github.com/dignifiedquire/sonora", rev = "dec6a074725e82ef371a024fc45236d60f0acf52" }
