[package]
name = "android-spike"
version = "0.0.0"
edition = "2024"
publish = false

# cdylib so the cross-compile actually links a .so the way an android jni lib will.
[lib]
crate-type = ["cdylib", "rlib"]

# a runnable smoke test: push to the device with adb and run it to prove the
# native deps work at runtime, not just at link time. see CHA-33.
[[bin]]
name = "smoke"
path = "src/main.rs"

# the point of this crate is its dependency graph, not its code: it pulls the
# native/-sys deps that must build under the ndk (opus via audiopus, ring,
# sonora's aec + simd) plus the pure-rust voice/grpc stack we expect to be fine.
[dependencies]
audiopus = "0.2.0"
sonora = "0.1.0"
rubato = "0.15"
ring = "0.17"
tonic.workspace = true
webrtc.workspace = true
tokio.workspace = true
