[package]
name = "chat-client"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "client"
path = "src/main.rs"

[dependencies]
chat-shared.workspace = true
chat-core.workspace = true
tokio.workspace = true
tonic.workspace = true
tokio-stream.workspace = true
webrtc.workspace = true
futures-util.workspace = true
tracing.workspace = true
anyhow.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = "1"
dirs = "5"
uuid.workspace = true
bytes.workspace = true
dotenvy.workspace = true
tower.workspace = true
http.workspace = true
email_address.workspace = true
chrono.workspace = true

# unambiguously client
iced = { version = "0.14.0", features = ["tokio", "sipper", "image", "advanced"] }
cpal = "0.18.1"
audiopus = "0.2.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "async-secret-service", "tokio", "crypto-rust"] }
tokio-retry = "0.3.0"
http-body-util = { version = "0.1.3", features = ["full"] }
sonora = "0.1.0"
rubato = "0.15"
iced_aw = "0.14.1"
# Pinned to match iced 0.14's transitive copies — used only by our vendored
# context-menu widget (src/widgets/context_menu.rs), a near-verbatim copy of
# iced_aw's with one close-behavior fix, so it speaks iced_core directly.
iced_core = "0.14"
iced_widget = "0.14"
indexmap = "2.14.0"
material-icons = "0.3"
google_material_symbols = "0.2"
kira = "0.12.1"
# kira binds its cpal backend to the default output device. To route audio cues
# to the user's *chosen* device we hand kira a cpal::Device — but it speaks
# cpal 0.17 internally, a different crate version than our 0.18. Pull 0.17 in
# under an alias so the Device type we construct matches kira's (Cargo unifies
# it with kira's own copy).
cpal_kira = { package = "cpal", version = "0.17.3" }
iced_selection = "0.5.0"
