[package]
name = "chat-shared"
version = "0.1.0"
edition = "2024"

[dependencies]
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tonic-prost.workspace = true
webrtc.workspace = true        # convert layer touches RTCSessionDescription
serde.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
bytes.workspace = true
jwt-simple.workspace = true

[build-dependencies]
tonic-prost-build = "0.14.6"
protoc-bin-vendored = "3"
